--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Offers</h1>
 
 <ul><% @offers.each do |offer|%></ul>
-  <li><%= offer.volume offer.category offer.general_location %></li>
-  <li><%= link_to "see details", offer_path %></li>
+  <li><%= offer.category %></li>
+  <li><%= link_to "see details", offer_path(offer) %></li>
 <% end %>
