--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -1,4 +1,4 @@
 <h2><%=@offer.user%></h2>
 
-<p><%= @offer.volume @offer.category %></p>
-<p><%= @offer.general_location @offer.pick_up_on %></p>
+<p><%= @offer.volume %></p>
+<p><%= @offer.general_location %></p>
