added pundit authorization and fixed forms

--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -2,3 +2,14 @@
 
 <p><%= @offer.volume %></p>
 <p><%= @offer.general_location %></p>
+
+<td>
+  <% if policy(@offer).update? %>
+    <%= link_to 'Edit', edit_offer_path(@offer) %>
+  <% end %>
+</td>
+<td>
+  <% if policy(@offer).destroy? %>
+    <%= link_to 'Destroy', @offer, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <% end %>
+</td>
