--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -29,7 +29,6 @@
 <%= simple_form_for :search, url: root_path, method: "GET", html: {
 class: 'form-inline' }  do |f| %>
   <%= f.input :category, collection: ["Any", "Glass", "Paper", "Plastic"] %>
-  <%= f.input :general_location, input_html: {value: ""} %>
   <%= f.submit "Search", class: "btn btn-primary" %>
 <% end %>
 
@@ -37,3 +36,14 @@ class: 'form-inline' }  do |f| %>
   <li><%= offer.category.name %></li>
   <li><%= link_to "see details", offer_path(offer) %></li>
 <% end %>
+
+<ul><% @offers_near.each do |offer|%></ul>
+  <li><%= offer.category.name %></li>
+  <li><%= link_to "see details", offer_path(offer) %></li>
+<% end %>
+
+<div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+     </div>
