--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,6 +27,14 @@
   <% end %>
 </div>
 
+<%= form_tag offers_path, method: :get do %>
+  <%= text_field_tag :query,
+    params[:query],
+    class: "form-control",
+    placeholder: "Search for offers"
+  %>
+  <%= submit_tag "Search", class: "btn btn-success" %>
+<% end %>
 
 <div class = "devise-link">
 <%= simple_form_for :search, url: root_path, method: "GET", html: {
