debugged home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,7 +25,7 @@
 
 <div class="cards">
   <%# @offers_near.each do |offer| %>
-  <% @offers.each do |offer| %>
+  <% @offers_near.each do |offer| %>
     <div class="card-product">
       <%  if offer.category.name == "Plastic" %>
         <% url = "jonathan-chng-OTDyDgPoJ_0-unsplash.jpg" %>
