--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,6 +1,27 @@
-<h1>Offers</h1>
-
-<ul><% @offers.each do |offer|%></ul>
-  <li><%= offer.category.name %></li>
-  <li><%= link_to "see details", offer_path(offer) %></li>
-<% end %>
+<div class="heading">
+<h1>Your filtered recyclables</h1>
+</div>
+<div class="cards">
+  <% @offers.each do |offer| %>
+    <div class="card-product">
+      <%= image_tag "erol-ahmed-wKTF65TcReY-unsplash.jpg" %>
+      <div class="card-product-infos">
+      <h1><%= link_to offer.volume , offer_path(offer) %></h1>
+      <h2><%= offer.general_location %></h2>
+      <h2><%= offer.user.username %></h2>
+      </div>
+    </div>
+  <% end %>
+</div>
+<div class="back-button">
+<%= link_to 'Home', root_path %>
+</div>
+<%#=  if offer.category.name == "plastic" %>
+  <%#= url = "jonathan-chng-OTDyDgPoJ_0-unsplash.jpg" %>
+<%#=elsif offer.category.name == "glass" %>
+  <%#= url = "lacey-williams-Jwh_k0K_QOM-unsplash.jpg" %>
+ <%#=elsif offer.category.name == "paper" %>
+<%#=  url = "alfonso-navarro-qph7tJfcDys-unsplash.jpg" %>
+<%#= else %>
+  <%#= url = "erol-ahmed-wKTF65TcReY-unsplash.jpg" %>
+<%#= end %>
