--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,8 @@
-<h2>Sign up</h2>
+<div class="heading">
+<h1>Sign up</h1>
+</div>
 
+<div class="cards">
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
@@ -23,5 +26,9 @@
     <%= f.button :submit, "Sign up" %>
   </div>
 <% end %>
-
+</div>
 <%= render "devise/shared/links" %>
+
+<div class="back-button">
+<%= link_to 'Back', root_path %>
+</div>
