beautifying pages and changing layout and navbar options

--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -1,7 +1,12 @@
 body {
-
+  color: #2d3963;
+  background-color: #f2f4f9;
 }
 
 .heading {
   margin: 32px;
+}
+
+.in-line-header {
+  display: flex;
 }
