--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,7 +8,7 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 72px;
 }
 
 .nav-item {
@@ -22,4 +22,9 @@
 .nav-user {
   color: green;
   padding-top: 8px;
+}
+
+.wagon {
+  display: inline;
+  color: #57607d;
 }
