--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,10 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <h2 class="nav-item" >RECYCLE WAGON</h2>
+  <span>
   <%= link_to "#", class: "navbar-brand" do %>
-    <%= image_tag "" %>
-    <% end %>
-
+  <%= image_tag "recycle-wagon-logo.png" %>
+  <% end %>
+  <h3 class="wagon">recycle wagon</h3>
+  </span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -13,20 +14,17 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
       <li class="nav-user">
-      <p><%= current_user.username %></p>
+        <p>Signed in</p>
         <% else %>
       <li class="nav-user">
           <p>Guest user</p>
       <% end %>
       <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to "Home", root_path, class: "nav-link" %>
-        </li>
         <li class="nav-item">
-          <%= link_to "Dashboard", "#", class: "nav-link" %>
+          <%= link_to current_user.username, "#", class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
-          <%= image_tag "", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= image_tag "https://ca.slack-edge.com/T02NE0241-U012AQNQBE0-b4129dd1ac76-512", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Create Offer", new_offer_path, class: "dropdown-item" %>
             <%= link_to "Search", "#", class: "dropdown-item" %>
