--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -30,3 +30,18 @@
 <%= link_to 'Back', root_path %>
 </div>
 
+<div class = "devise-link">
+<%= simple_form_for :search, url: root_path, method: "GET", html: {
+class: 'form-inline' }  do |f| %>
+  <%= f.input :category, collection: ["Any", "Glass", "Paper", "Plastic"] %>
+  <%= f.input :general_location, input_html: {value: ""} %>
+  <%= f.submit "Search", class: "btn btn-success" %>
+
+<% end %>
+</div>
+
+<div id="map"
+  style="width: 100%; height: 600px;"
+  data-markers="<%= @markers.to_json %>"
+  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
