trying to add images to each category for home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,16 @@
 <div class="cards">
   <% @offers.each do |offer| %>
     <div class="card-product">
-      <%= image_tag "erol-ahmed-wKTF65TcReY-unsplash.jpg" %>
+      <%=  if offer.category.name == "plastic" %>
+        <%= url = "jonathan-chng-OTDyDgPoJ_0-unsplash.jpg" %>
+      <%=elsif offer.category.name == "glass" %>
+        <%= url = "lacey-williams-Jwh_k0K_QOM-unsplash.jpg" %>
+      <%=elsif offer.category.name == "paper" %>
+        <%=  url = "alfonso-navarro-qph7tJfcDys-unsplash.jpg" %>
+      <%= else %>
+        <%= url = "erol-ahmed-wKTF65TcReY-unsplash.jpg" %>
+      <%= end %>
+      <%= image_tag "#{url}" %>
       <div class="card-product-infos">
       <h1><%= link_to offer.volume , offer_path(offer) %></h1>
       <h2><%= offer.general_location %></h2>
@@ -18,15 +27,6 @@
   <% end %>
 </div>
 
-<%#=  if offer.category.name == "plastic" %>
-  <%#= url = "jonathan-chng-OTDyDgPoJ_0-unsplash.jpg" %>
-<%#=elsif offer.category.name == "glass" %>
-  <%#= url = "lacey-williams-Jwh_k0K_QOM-unsplash.jpg" %>
- <%#=elsif offer.category.name == "paper" %>
-<%#=  url = "alfonso-navarro-qph7tJfcDys-unsplash.jpg" %>
-<%#= else %>
-  <%#= url = "erol-ahmed-wKTF65TcReY-unsplash.jpg" %>
-<%#= end %>
 
 <div class = "devise-link">
 <%= simple_form_for :search, url: root_path, method: "GET", html: {
