changing structure of pages and fixing accepted offer bug

--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -13,7 +13,7 @@
             <%= link_to "I'll take it!", offer_accepted_offers_path(@offer), class:"btn-flat mt-3", method: 'POST' %>
           <% end %>
           <% if @accepted_offer && policy(@accepted_offer).destroy? %>
-            <%= link_to "Cancel pick up", accepted_offer_path(@offer), method: 'DELETE', data: { confirm: "Are you sure?" } %>
+            <%= link_to "Cancel pick up", accepted_offer_path(@accepted_offer), method: 'DELETE', data: { confirm: "Are you sure?" } %>
           <% end %>
         </div>
         <td>
