changes to logo and CSS and adding home link to logo

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -25,6 +25,10 @@
 }
 
 .wagon {
-  display: inline;
-  color: #57607d;
+  color: #6610f2;
+    h3 {
+    margin-bottom: -9px;
+    margin-left: -3px;
+    font-family: 'Josefin Sans', sans-serif;
+  }
 }
