--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -31,17 +31,7 @@
 </div>
 
 <div class="back-button">
-<%= link_to 'Back', root_path %>
-</div>
-
-<div class = "devise-link">
-<%= simple_form_for :search, url: root_path, method: "GET", html: {
-class: 'form-inline' }  do |f| %>
-  <%= f.input :category, collection: ["Any", "Glass", "Paper", "Plastic"] %>
-  <%= f.input :general_location, input_html: {value: ""} %>
-  <%= f.submit "Search", class: "btn btn-success" %>
-
-<% end %>
+<%= link_to 'Back', :back %>
 </div>
 
 <div id="map"
