fixing links, a lot of CSS beautifying, creating a create button, dropdowns for search, sign up button, refcatoring homepage

--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -10,3 +10,26 @@ body {
 .in-line-header {
   display: flex;
 }
+
+.search-home {
+  margin-top: 136px;
+}
+
+// .header-home {
+//     display: grid;
+//     grid-template-columns: 1fr 1fr;
+//     grid-gap: 2em;
+//     padding-top: 120px;
+//     width: 100%;
+//     z-index: 1;
+// }
+
+// .header-div {
+//     display: block;
+// }
+
+// .header-div img {
+//   height: 100%;
+//   width: 560px;
+//   object-fit: cover;
+// }
