--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,12 +23,12 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Sign up", class:"btn-flat" %>
   </div>
 <% end %>
 </div>
 <%= render "devise/shared/links" %>
 
 <div class="back-button">
-<%= link_to 'Back', root_path %>
+<%= link_to 'Back', :back %>
 </div>
