--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -2,17 +2,19 @@
 <div class="heading">
 <h1>Commit to Pick Up!</h1>
 </div>
-<div class="cards">
+<div class="cards" id="card-show-cards">
     <div class="card-show">
       <div class="card-show-infos">
         <h1><%= @offer.volume %></h1>
-        <h2><%= @offer.general_location %></h2>
+        <h2><%=@offer.pick_up_on %></h2>
         <h2><%=@offer.user.username%></h2>
         <div>
           <% if !@accepted_offer && policy(@new_accepted_offer).create? %>
-            <%= link_to "I'll take it!", offer_accepted_offers_path(@offer), class:"btn-flat mt-3", method: 'POST' %>
+            <h2><%= @offer.general_location %></h2>
+            <%= link_to "I'll take it!", offer_accepted_offers_path(@offer), class:"btn-flat mt-3 p-1", method: 'POST' %>
           <% end %>
           <% if @accepted_offer && policy(@accepted_offer).destroy? %>
+            <h2><%= @offer.exact_location %></h2>
             <%= link_to "Cancel pick up", accepted_offer_path(@accepted_offer), method: 'DELETE', data: { confirm: "Are you sure?" } %>
           <% end %>
         </div>
@@ -28,14 +30,13 @@
         </td>
       </div>
     </div>
+    <div class="back-button">
+      <%= link_to 'Home', root_path %>
+    </div>
 </div>
-
-<div class="back-button">
-<%= link_to 'Back', :back %>
-</div>
-
 <div id="map"
-  style="width: 100%; height: 600px;"
+  style="width: 50%; height: 300px;"
   data-markers="<%= @markers.to_json %>"
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
 </div>
+
