--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,22 +1,31 @@
+
 <div class="heading">
-<h2>Ready for Pick Up!</h2>
+  <h2>Ready for Pick Up!</h2>
 <div class="in-line-header">
-<h1>Sign up to instantly claim these recyclables</h1>
-<%= link_to 'Sign up', new_user_registration_path, class:"btn-flat ml-3" %>
+  <h1>Sign up to instantly claim FREE recyclables</h1>
+  <%= link_to 'Sign up', new_user_registration_path, class:"btn-flat ml-3 mr-3" %>
+  <h1>or</h1>
+  <%= link_to "Create Offer", new_offer_path, class:"btn-offer-create ml-3" %>
 </div>
+  <h2>and help save the planet</h2>
 </div>
 
-<%= form_tag offers_path, method: :get do %>
-  <%= text_field_tag :query,
-    params[:query],
-    class: "form-control",
-    placeholder: "Search for offers"
-  %>
-  <%= submit_tag "Search", class: "btn btn-success" %>
-<% end %>
+<div class="search-home">
+  <%= form_tag offers_path, method: :get do %>
+    <%= text_field_tag :query,
+      params[:query],
+      class: "form-control",
+      placeholder: "Search for recyclables"
+    %>
+    <%= submit_tag "Search", class: "btn-flat" %>
+  <% end %>
+</div>
+
+
 
 <div class="cards">
-  <% @offers_near.each do |offer| %>
+  <%# @offers_near.each do |offer| %>
+  <% @offers.each do |offer| %>
     <div class="card-product">
       <%  if offer.category.name == "Plastic" %>
         <% url = "jonathan-chng-OTDyDgPoJ_0-unsplash.jpg" %>
@@ -31,19 +40,14 @@
       <div class="card-product-infos">
       <h1><%= link_to offer.volume , offer_path(offer) %></h1>
       <h2><%= offer.general_location %></h2>
-      <p><%= offer.user.username %></p>
-      <p><%= (offer.distance.round(2).to_s + "km away") if offer.distance >= 1 %></p>
-      <p><%= ((offer.distance.round(3) * 1000).to_s + "meters away") if offer.distance < 1 %></p>
+      <h3>Pick up on: <%=offer.pick_up_on %></h3>
+     <!--  <p><%#= (offer.distance.round(2).to_s + "km away") if offer.distance >= 1 %></p>
+      <p><%#= ((offer.distance.round(3) * 1000).to_s + "meters away") if offer.distance < 1 %></p> -->
       </div>
     </div>
   <% end %>
 </div>
 
-<div id="map"
-  style="width: 100%; height: 600px;"
-  data-markers="<%= @markers.to_json %>"
-  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-</div>
 
 
 
