--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,16 +27,25 @@
           <%= link_to current_user.username, "#", class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
-          <%= image_tag "https://ca.slack-edge.com/T02NE0241-U012AQNQBE0-b4129dd1ac76-512", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <% if current_user.username == "SophieRecycler" %>
+            <%= image_tag "https://ca.slack-edge.com/T02NE0241-U011XTJSQUE-f36f6944853c-512", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <% elsif current_user.username == "VinnyRecycler" %>
+            <%= image_tag "https://ca.slack-edge.com/T02NE0241-U012AQNQBE0-b4129dd1ac76-512", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <% else %>
+            <%= image_tag "https://ca.slack-edge.com/T02NE0241-U012AQNQBE0-b4129dd1ac76-512", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <% end %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Create Offer", new_offer_path, class: "dropdown-item" %>
-            <%= link_to "Search", "#", class: "dropdown-item" %>
+            <%= link_to "Search", offers_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
       <% else %>
         <li class="nav-item">
           <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Sign up', new_user_registration_path, class: "nav-link" %>
         </li>
       <% end %>
     </ul>
