--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,15 +24,17 @@
       <% end %>
       <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to current_user.username, "#", class: "nav-link" %>
+          <%= link_to current_user.username, dashboard_offers_path, class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
-          <% if current_user.username == "SophieRecycler" %>
+          <% if current_user.username == "LuckySevans7" %>
             <%= image_tag "https://ca.slack-edge.com/T02NE0241-U011XTJSQUE-f36f6944853c-512", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <% elsif current_user.username == "VinnyRecycler" %>
             <%= image_tag "https://ca.slack-edge.com/T02NE0241-U012AQNQBE0-b4129dd1ac76-512", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <% elsif current_user.username == "GabrielGreen" %>
+            <%= image_tag "https://ca.slack-edge.com/T02NE0241-U012H8QE7JM-484d2a1920db-512", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <% else %>
-            <%= image_tag "https://ca.slack-edge.com/T02NE0241-U012AQNQBE0-b4129dd1ac76-512", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <%= image_tag "https://ca.slack-edge.com/T02NE0241-U0124RW7F1R-ef37f689d26e-512", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <% end %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Create Offer", new_offer_path, class: "dropdown-item" %>
